# match-calc-combustivel

./: .env.example  .gitignore  .python-version  README.md  VISAO.md  pyproject.toml  requirements.txt  vercel.json
docs/: 200.html  Wireframe_das_telas.drawio  index.html  sw.js
docs/_nuxt/: 03ffff6.js  04495c9.js  045bc49.js  084a86f.js  0bfcc4a.js  1933892.js  1bd553e.js  1f37368.js  2408ccf.js  240edd4.js  248328c.js  293aacc.js  3005bfb.js  33f6bc2.js  36f61ff.js  373ab2c.js  4076c86.js  41375e0.js  448f7b8.js  46da4c0.js  499b72c.js  49e1afc.js  49e6dcb.js  5130e3d.js  52d9d93.js  53f9987.js  579df30.js  57d82a1.js  58e05b4.js  59243fc.js  5b7657f.js  5c9a85e.js  5e5544d.js  60ec09a.js  6609bda.js  663fee1.js  69f0c9d.js  7bdc7c2.js  7d990a0.js  7fc47ee.js  (+47 more)
documentos/: Wireframe_das_telas.drawio  combustivel_app_Insomnia_2023-10-17.json  combustivel_app_teste.side
e2e/: cypress.config.js  package-lock.json  package.json
e2e/cypress/e2e/: limpar_dados_inseridos.cy.js  obter_relatorio_apenas_ida.cy.js  obter_relatorio_ida_e_volta.cy.js  spec.cy.js  (+1 more)
frontend/: README.md  nuxt.config.js  package-lock.json  package.json
frontend/components/: Demosntracao.vue  Footer.vue  FooterApp.vue  Header.vue  HeaderApp.vue  Main.vue  Sobre.vue
frontend/layouts/: default.vue
frontend/pages/: index.vue
frontend/utils/: rules.js
frontend_bootstrpvue/components/: Footer.vue  Header.vue
src/: config.py  controller.py  index.py  mapbox_api.py  schemas.py
static/: styles.css
templates/: base.html  home.html  item.html
tests/: conftest.py  test_coord.py
(+15 files in other folders)
