[tool.poetry]
name = "match-calc-combustivel"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.88.0"
pydantic = {extras = ["dotenv"], version = "^1.9"}
pytest = "7.1.3"
pytest-asyncio = "0.20.3"
uvicorn = "0.20.0"
pytz = "^2023.3.post1"
requests = "^2.31.0"
orjson = "^3.9.9"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
httpx = "^0.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
